# plugins

./: .pre-commit-config.yaml  CLAUDE.md  manifest.toml
.beads/: issues.jsonl
.github/workflows/: deploy-plugins.yml  security.yml
_templates/help-skill/: SKILL.md
ccc/: README.md  SKILL.md
ccc/.claude-plugin/: marketplace.json
ccc/agents/: tutor.md
ccc/commands/: course.md  lesson.md  list.md  practice.md  progress.md  reset.md
claude-code-course/: SKILL.md
claude-code-course/.claude-plugin/: marketplace.json
claude-code-course/commands/: course.md  lesson.md  level.md  list.md  next.md  practice.md  progress.md  start.md
claude-code-course/lessons/: lesson-1.md  lesson-2.md  lesson-3.md  lesson-4.md  lesson-5.md
claude-code-course/skills/: progress-schema.json
craft-coder/: README.md  SKILL.md
craft-coder/.claude-plugin/: marketplace.json
craft-coder/agents/: requirements-writer.md  rust-code-reviewer.md  rust-developer.md  rust-project-init.md  tdd-test-writer.md
craft-coder/backend-rust/: SKILL.md
craft-coder/commands/: craft.md  why.md
craft-coder/decision-logger/: SKILL.md
craft-coder/help/: SKILL.md
craft-coder/testing/: SKILL.md
data-engineer/: SKILL.md
data-engineer/commands/: dag.md  model.md  (+2 more)
debugging-mastery/: SKILL.md
devops-sre/: SKILL.md
examples/notes-api/: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml
examples/notes-api/src/: lib.rs  main.rs
examples/notes-api/tests/: api_tests.rs  health.rs  notes.rs
fullstack-developer/: README.md
idea-to-mvp/: SKILL.md
mobile-developer/: SKILL.md
(+112 files in other folders)
